--- a/form.html
+++ b/form.html
@@ -25,7 +25,8 @@
         </form>
         </center>
 
-        <script>
+    // hello   
+    <script>
              var username = document.getElementById('name');
              var password = document.getElementById('pass');
              var c_password = document.getElementById('c_pass');
